fix the overflow problems

--- a/css/personal_demo.css
+++ b/css/personal_demo.css
@@ -88,6 +88,10 @@ nav {
 }
 
 /*certificates*/
+.certificates {
+    margin-top:50px;
+}
+
 .certificates h2{
     margin: 40px 0 20px 0;
 }
@@ -98,32 +102,38 @@ nav {
 
 .certificates figure {
     display:flex;
-    overflow-x:auto;
+    overflow:scroll;
     background: #ffff00;
     width:60%;
-
+    height:480px;
+    align-items:center;
 }
 
 .certificates img {
     border: solid 5px;
     margin:5px;
-    width:80%;
-    height:80%;
+    width:95%;
+    height:95%;
+
 }
 
 .certificates p {
-    margin-left:60px;
-    width:30%;
-    font-size: 1.8em;
+    margin-left:40px;
+    width:40%;
+    font-size: 1.5em;
 }
 
 /*featured-demo*/
 .featured-demo {
-    margin-top: 100px;
+    margin-top: 50px;
 }
 
 .featured-demo h2 {
     margin-bottom: 25px;
+}
+
+.featured-demo ul {
+    padding:0px;
 }
 
 .demo-list li {
@@ -199,6 +209,10 @@ figure p {
         line-height: 1.25em;
     }
 
+    .some-introduction li {
+        line-height: 1.2em;
+    }
+
     .theme-img { 
         display: none;
     }
@@ -209,6 +223,7 @@ figure p {
 
     .certificates-img figure {
         width:100%;
+        height:100%;
     }
 
     .certificates-img p {
